# seqan3_test

./: CMakeLists.txt  Dockerfile
include/: gccontent.hpp  io.hpp  minimiser.hpp  ranges.hpp  starter.hpp
resources/: seq.fastq
src/: CMakeLists.txt  gccontent.cpp  io.cpp  main.cpp  main_original.cpp  minimiser.cpp  ranges.cpp  starter.cpp
test/: CMakeLists.txt  config.h.in
test/cli/: CMakeLists.txt  fastq_to_fasta_options_test.cpp
